Correction couleurs mode contrastes élevés

--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
   :root {
     --color-background: #fff;
     --color-text-main: #000;
+    --color-text-secondary: #6c6f78;
+    --color-primary: hsl(226, 80%, 45%);
+    --color-primary-amplified: hsl(226, 95%, 50%);
+    --color-input-background: #f2f2f2;
+    --color-border: #ccc;
   }
 }
 
